--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
 	"description": "CoRE's Homepage 2019 Edition",
 	"main": "app.js",
 	"scripts": {
-		"build:css": "node-sass-chokidar public/sass/ -o public/css/",
-		"watch:css": "npm run build:css && node-sass-chokidar public/sass/ -o public/css/ --watch --recursive",
+		"deploy": "gh-pages -d build",
+		"build:css": "node-sass-chokidar sass/ -o public/css/",
+		"watch:css": "npm run build:css && node-sass-chokidar sass/ -o public/css/ --watch --recursive",
 		"start": "node app.js"
 	},
 	"author": "Yu Xuan Wu",
 	"license": "ISC",
 	"dependencies": {
-		"ejs": "^2.5.9",
 		"express": "^4.16.3",
-		"node-sass-chokidar": "^1.3.3"
+		"gh-pages": "^2.0.1",
+		"node-sass-chokidar": "^1.3.4"
 	}
 }
