--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
 	"description": "CoRE's Homepage 2019 Edition",
 	"main": "app.js",
 	"scripts": {
+		"start": "node app.js",
 		"deploy": "node scripts/deploy.js",
-		"build:css": "node-sass-chokidar sass/ -o public/css/",
-		"watch:css": "npm run build:css && node-sass-chokidar sass/ -o public/css/ --watch --recursive",
-		"start": "node app.js"
+		"watch:css": "npm run compile:css && node-sass-chokidar sass/ -o public/css/ --watch --recursive",
+
+		"compile:css": "node-sass-chokidar sass/ -o public/css/",
+		"prefix:css": "postcss --use autoprefixer -b 'last 5 versions' public/css/main.css -o public/css/main.prefix.css",
+		"compress:css": "node-sass public/css/main.prefix.css public/css/main.min.css --output-style compressed",
+		"build:css": "npm-run-all compile:css prefix:css compress:css"
 	},
 	"author": "Yu Xuan Wu",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.16.3",
+		"autoprefixer": "^9.5.0",
 		"gh-pages": "^2.0.1",
-		"node-sass-chokidar": "^1.3.4"
+		"node-sass-chokidar": "^1.3.4",
+		"npm-run-all": "^4.1.5",
+		"postcss-cli": "^6.1.2"
 	}
 }
